--- a/eventre-master/eventre-master/index.html
+++ b/eventre-master/eventre-master/index.html
@@ -150,7 +150,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/ayse-aktag.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/ayse-aktag.jpg" alt="Konuşmacı Ayşe Aktağ Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -169,7 +169,7 @@
                     <!-- Speaker 2 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/yasemin-balpinar.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/yasemin-balpinar.jpg" alt="Konuşmacı Yasemin Balpınar Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -192,7 +192,7 @@
                     <!-- Speaker 3 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/tugce-dinc.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/tugce-dinc.jpg" alt="Konuşmacı Tuğçe Dİnç Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -211,7 +211,7 @@
                     <!-- Speaker 4 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/ozge-gural.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/ozge-gural.jpg" alt="Konuşmacı Özge Gürel Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -230,7 +230,7 @@
                     <!-- Speaker 5 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/tugba-peker-gulbahce.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/tugba-peker-gulbahce.jpg" alt="Konuşmacı Tuğba Peker Gülbahçe Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -253,7 +253,7 @@
                     <!-- Speaker 6 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/merve-basak.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/merve-basak.jpg" alt="Konuşmacı Merve Başak Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -276,7 +276,7 @@
                     <!-- Speaker 7 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/seyda-oner.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/seyda-oner.jpg" alt="Konuşmacı Şeyda Öner Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -297,7 +297,7 @@
                     <!-- Speaker 8 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/kubra-odabas-tasli.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/kubra-odabas-tasli.jpg" alt="Konuşmacı Kübra Odabaş Taşlı Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -319,7 +319,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/burcu-karakurt-gun.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/burcu-karakurt-gun.jpg" alt="Konuşmacı Burcu Karakurt Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -341,7 +341,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/inci-bayramoglu.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/inci-bayramoglu.jpg" alt="Konuşmacı İnci Bayramoğlu Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -366,7 +366,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/merve-karabulut.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/merve-karabulut.jpg" alt="Konuşmacı Merve Karabulut Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
@@ -390,7 +390,7 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/burcu-haboglu-baba.jpg" alt="speaker" class="img-fluid">
+                            <img src="images/speakers/burcu-haboglu-baba.jpg" alt="Konuşmacı Burcu Haboğlu Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
