--- a/kadin-yazilimci/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/kadin-yazilimci/index.html
@@ -468,7 +468,6 @@
                                 Teknoloji Alanında, Bilgisayar Mühendisliğinden Farklı Alanlara Uzanan Yolculuklar
                             </td>
                             <td colspan="1">
-                                Zekiye Aldemir,
                                 Ayşe Akdağ,
                                 Tuğçe Dinç,
                                 Merve Başak
@@ -578,8 +577,6 @@
 
 
         </div>
-        </div>
-        </div>
     </section>
 
 
@@ -621,7 +618,7 @@
                                 </div>
                             </li>
 
-                            <li class="list-inline-item">
+                            <!--<li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
                                     <a href="#">
@@ -664,7 +661,7 @@
                                         <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
                                     </a>
                                 </div>
-                            </li>
+                            </li>-->
 
 
                         </ul>
@@ -677,7 +674,7 @@
                     </div>
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
-                            <li class="list-inline-item">
+                            <!--<li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
                                     <a href="#">
@@ -729,7 +726,7 @@
                                         <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
                                     </a>
                                 </div>
-                            </li>
+                            </li>-->
 
 
                         </ul>
@@ -742,7 +739,7 @@
                     </div>
                     <div class="block text-center">
                         <ul class="list-inline sponsors-list">
-                            <li class="list-inline-item">
+                            <!--<li class="list-inline-item">
                                 <div class="image-block text-center">
                                     <p>Konaklama ve Etkinlik Yemeği Sponsorumuz</p>
                                     <a href="#">
@@ -794,7 +791,7 @@
                                         <img src="images/sponsors/leto-city-hotel.png" alt="sponsors-logo" class="img-fluid">
                                     </a>
                                 </div>
-                            </li>
+                            </li>-->
 
 
                         </ul>
