--- a/kadin-yazilimci/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/kadin-yazilimci/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
 
     <!-- SITE TITTLE -->
@@ -138,13 +138,44 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <!-- Section Title -->
                     <div class="section-title white">
-                        <h3>Konuşmacılarımız</h3>
-                        <p>Etkinliğimizde yer alacak saygıdeğer konuşmacılarımız...</p>
+                        <h3>Etkinlik Koordinatörümüz</h3>
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6 mx-auto text-center">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/speakers/ezgi-erdem-aytac.jpg" alt="Organizatör Ezdi ERDEM AYTAÇ Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://twitter.com/pmezgi"><i class="fa fa-twitter"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ezgierdem/"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a href="single-speaker.html">Ezgi Erdem Aytaç</a></h5>
+                            <p><b>Etkinlik Koordinatörü</b></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-12">
+                    <!-- Section Title -->
+                    <div class="section-title white">
+                        <h3>Konuşmacılarımız</h3>
+                    </div>
+                </div>
+            </div>
+
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <!-- Speaker 1 -->
@@ -457,8 +488,15 @@
 
                         </tr>
                         <tr>
-                            <th scope="row">10.30</th>
+                            <th scope="row">10.15</th>
                             <td>Açılış Konuşmaları</td>
+
+                        </tr>
+
+                        <tr>
+                            <th scope="row">10.30</th>
+                            <td>Bilişimde ve Matematikte Kadınlar Fikir Annesi</td>
+                            <td>Ezgi Erdem Aytaç</td>
 
                         </tr>
                         <tr>
@@ -468,6 +506,7 @@
                                 Teknoloji Alanında, Bilgisayar Mühendisliğinden Farklı Alanlara Uzanan Yolculuklar
                             </td>
                             <td colspan="1">
+                                Yasemin Balpınar
                                 Ayşe Akdağ,
                                 Tuğçe Dinç,
                                 Merve Başak
@@ -842,7 +881,7 @@
                                 <a href="https://www.instagram.com/techeskisehir?"><i class="fa fa-instagram"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                                <a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -853,7 +892,7 @@
     </footer>
     <!-- Subfooter -->
     <footer class="subfooter">
-        <div class="container">
+        <!--<div class="container">
             <div class="row">
                 <div class="col-md-6 align-self-center">
                     <div class="copyright-text">
@@ -864,7 +903,7 @@
                     <a href="#" class="to-top"><i class="fa fa-angle-up"></i></a>
                 </div>
             </div>
-        </div>
+        </div>-->
     </footer>
 
 
