04/03, 16.04organisators page, google map api

--- a/kadin-yazilimci/kadin-yazilimci/index.html
+++ b/kadin-yazilimci/kadin-yazilimci/index.html
@@ -38,7 +38,7 @@
         <div class="container-fluid p-0">
             <!-- logo -->
             <a class="navbar-brand" href="index.html">
-                
+
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa fa-bars"></span>
@@ -60,6 +60,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#scheduleId">Etkinlik Takvimi<span> </span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="organisators.html">Organizatörlerimiz<span> </span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#sponsorId">Sponsorlarımız<span> </span></a>
@@ -159,7 +162,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Ezgi Erdem Aytaç</a></h5>
+                            <h5><a>Ezgi Erdem Aytaç</a></h5>
                             <p><b>Etkinlik Koordinatörü</b></p>
                         </div>
                     </div>
@@ -191,7 +194,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Ayşe Aktağ</a></h5>
+                            <h5><a>Ayşe Aktağ</a></h5>
                             <p><b>Cyber Security Specialist / Siber Güvenlik Uzmanı @TurkNet</b></p>
                         </div>
                     </div>
@@ -210,7 +213,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Yasemin Balpınar</a></h5>
+                            <h5><a>Yasemin Balpınar</a></h5>
                             <p>
                                 <b>
                                     Network and Technical Operations Manager
@@ -233,7 +236,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Tuğçe Dinç</a></h5>
+                            <h5><a>Tuğçe Dinç</a></h5>
                             <p><b>Data Engineer @Trendyol</b></p><br />
                         </div>
                     </div>
@@ -252,7 +255,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Özge Güral</a></h5>
+                            <h5><a>Özge Güral</a></h5>
                             <p><b>UX Designer</b></p><br />
                         </div>
                     </div>
@@ -271,7 +274,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Tuğba Peker Gülbahçe</a></h5>
+                            <h5><a>Tuğba Peker Gülbahçe</a></h5>
                             <p>
                                 <b>
                                     Lead Product Manager @Sendeo - Koç Group
@@ -294,7 +297,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Merve Başak</a></h5>
+                            <h5><a>Merve Başak</a></h5>
                             <p>
                                 <b>
                                     BA & Scrum Master @YapıKredi
@@ -317,7 +320,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Şeyda Önder</a></h5>
+                            <h5><a>Şeyda Önder</a></h5>
                             <p>
                                 <b>Sr. Business Analyst & Scrum Master @Ford Otosan</b>
                             </p><br />
@@ -338,7 +341,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Kübra Odabaş Taşlı</a></h5>
+                            <h5><a>Kübra Odabaş Taşlı</a></h5>
                             <p>
                                 <b>Group Head of Products & Channels @Bankpozitif</b>
                             </p><br />
@@ -360,7 +363,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Burcu Karakurt Gün</a></h5>
+                            <h5><a>Burcu Karakurt Gün</a></h5>
                             <p>
                                 <b>Kariyer Koçu ve Yoga Alliance Yoga Eğitmeni</b>
                             </p>
@@ -382,7 +385,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">İnci Bayramoğlu</a></h5>
+                            <h5><a>İnci Bayramoğlu</a></h5>
                             <p>
                                 <b>
                                     Project Manager - @DOJO Talent
@@ -407,7 +410,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Merve Karabulut</a></h5>
+                            <h5><a>Merve Karabulut</a></h5>
                             <p>
                                 <b>
                                     Product Sales Manager @VTEL
@@ -431,7 +434,7 @@
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a href="single-speaker.html">Burcu Haboğlu Baba</a></h5>
+                            <h5><a>Burcu Haboğlu Baba</a></h5>
                             <p>
                                 <b>
                                     Matematikçi / Eğitim Girişimcisi
@@ -872,7 +875,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="block text-center">
-                      
+
                         <ul class="social-links-footer list-inline">
                             <li class="list-inline-item">
                                 <a href="https://twitter.com/techeskisehir"><i class="fa fa-twitter"></i></a>
@@ -926,7 +929,7 @@
     <!-- SyoTimer -->
     <script src="plugins/syotimer/jquery.syotimer.min.js"></script>
     <!-- Google Mapl -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPzu5lji7rT5C4Qh-MMHFtXFeRMAzLclU"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvxHxTwud83zX-N9vTTbDQP81eIiSzsj0"></script>
     <script type="text/javascript" src="plugins/google-map/gmap.js"></script>
     <!-- Custom Script -->
     <script src="js/custom.js"></script>
