--- a/kadin-yazilimci/kadin-yazilimci/organisators.html
+++ b/kadin-yazilimci/kadin-yazilimci/organisators.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Eventre</title>
+    <title>Bilişim Sektöründe ve Matematik Alanında Kadınlar</title>
 
     <!-- PLUGINS CSS STYLE -->
     <!-- Bootstrap -->
@@ -101,21 +101,39 @@
                     <!-- Speaker 1 -->
                     <div class="speaker-item">
                         <div class="image">
-                            <img src="images/speakers/ayse-aktag.jpg" alt="Konuşmacı Ayşe Aktağ Fotoğraf" class="img-fluid">
+                            <img src="images/speakers/gulcin-yildirim-jelinek.jpg" alt="Organizatör Gülçin Yıldırım Jelinek Fotoğraf" class="img-fluid">
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/gulcinyildirim/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="content text-center">
-                            <h5><a>XXX</a></h5>
-                            <p><b>Cyber Security Specialist / Siber Güvenlik Uzmanı @TurkNet</b></p>
+                            <h5><a>Gülçin Yıldırım Jelínek</a></h5>
+                            <p><b>Staff Engineer @EDB</b></p>
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <!-- Speaker 1 -->
+                    <div class="speaker-item">
+                        <div class="image">
+                            <img src="images/speakers/nesrin-kalender.jpg" alt="Organizatör Nesrin Kalender Jelinek Fotoğraf" class="img-fluid">
+                            <div class="primary-overlay"></div>
+                            <div class="socials">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/nesrin-kalender"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content text-center">
+                            <h5><a>Nesrin Kalender</a></h5>
+                            <p><b>Sr. Front End Developer @MobileITM</b></p><br />
+                        </div>
+                    </div>
+                </div>
+               
 
             </div>
 
@@ -136,8 +154,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ceydakesgin/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -160,8 +177,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/fatma-yaren-%C3%B6z%C3%A7elik-9b67a81b4/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -184,8 +200,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/teslimedede/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -193,7 +208,7 @@
                             <h5><a>Teslime Dede</a></h5>
                             <p>
                                 <b>
-                                    Eskişehir Osmangazi Üniversitesi, Matematik ve Bilgisayar Bölümü Öğrencisi,
+                                    Eskişehir Osmangazi Üniversitesi, Matematik ve Bilgisayar Bilimleri Bölümü Öğrencisi,
                                     GDSC Core Team
                                 </b>
                             </p>
@@ -211,8 +226,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/eren-bostan-3ab007256/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -235,8 +249,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/kemal-sira%C3%A7-emiro%C4%9Flu-ba11bb292/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -260,8 +273,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/%C3%B6mer%C3%B6zkan/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -284,8 +296,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/hakanyavaseng/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -305,8 +316,7 @@
                             <div class="primary-overlay"></div>
                             <div class="socials">
                                 <ul class="list-inline">
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/ayseaktag/"><i class="fa fa-linkedin"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/alperen-gunes/"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
